--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
+        xmlns:wpfExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         WindowStartupLocation="CenterScreen"
         PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus"
         AllowsTransparency="True" Background="Transparent"
@@ -26,7 +27,12 @@
             <RowDefinition Height="10*" />
             <RowDefinition Height="5*" />
             <RowDefinition Height="5*" />
-            <RowDefinition Height="35*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
             <RowDefinition Height="5*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
@@ -44,7 +50,27 @@
                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"
                 ValueChanged="ScreenSize_ValueChanged"
                 AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"/>
-        <Button x:Name="BtnMaximize" Grid.Column="1" Grid.Row="8" Content="Maximizar/Minimizar" Click="BtnMaximize_Click" Foreground="{StaticResource MainColorSolid}"/>
-        <Button x:Name="BtnClose" Grid.Column="1" Grid.Row="10" Content="Salir" Click="BtnClose_Click" Foreground="{StaticResource MainColorSolid}"/>
+        <Button x:Name="BtnMaximize" Grid.Column="1" Grid.Row="7" Content="Maximizar/Minimizar" Click="BtnMaximize_Click" Foreground="{StaticResource MainColorSolid}"/>
+        <Label Grid.Row="9" Grid.Column="1" Content="Background Fondo" Foreground="{StaticResource MainColorSolid}"/>
+        <Grid Grid.Row="10" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="45*" />
+                <ColumnDefinition Width="10*" />
+                <ColumnDefinition Width="45*" />
+            </Grid.ColumnDefinitions>
+            <wpfExtended:ColorPicker Grid.Column="0"/>
+            <wpfExtended:ColorPicker Grid.Column="2"/>
+        </Grid>
+        <Label Grid.Row="12" Grid.Column="1" Content="Colores Principales" Foreground="{StaticResource MainColorSolid}"/>
+        <Grid Grid.Row="13" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="45*" />
+                <ColumnDefinition Width="10*" />
+                <ColumnDefinition Width="45*" />
+            </Grid.ColumnDefinitions>
+            <wpfExtended:ColorPicker Grid.Column="0"/>
+            <wpfExtended:ColorPicker Grid.Column="2"/>
+        </Grid>
+        <Button x:Name="BtnClose" Grid.Column="1" Grid.Row="15" Content="Salir" Click="BtnClose_Click" Foreground="{StaticResource MainColorSolid}"/>
     </Grid>
 </Window>
