--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -40,7 +40,7 @@
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="0" Content="-" Click="BtnMinimize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
                 <Button Grid.Column="1" Content="□" Click="BtnMaximize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
-                <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
+                <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource CloseButton}" />
             </Grid>
         </Grid>
         <Grid Grid.Row="1" x:Name="WindowContent">
