--- a/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
@@ -3,19 +3,16 @@
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
     <Style TargetType="{x:Type ContextMenu}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="False" />
         <Setter Property="Grid.IsSharedSizeScope" Value="true" />
         <Setter Property="HasDropShadow" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource MainColorSolid}" />
+        <Setter Property="Background" Value="{DynamicResource BackgroundContainerGradient}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
                     <Border x:Name="Border"
-                Background="{StaticResource MenuPopupBrush}"
-                BorderThickness="1">
-                        <Border.BorderBrush>
-                            <SolidColorBrush Color="{StaticResource BorderMediumColor}" />
-                        </Border.BorderBrush>
+                Background="{TemplateBinding Background}"
+                BorderThickness="0">
                         <StackPanel IsItemsHost="True"
                       KeyboardNavigation.DirectionalNavigation="Cycle" />
                     </Border>
@@ -28,5 +25,10 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+    <Style TargetType="{x:Type MenuItem}">
+        <Setter Property="Background" Value="{DynamicResource MainColorSolid}" />
+        <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
+        <Setter Property="Margin" Value="5,5,5,0" />
     </Style>
 </ResourceDictionary>
