--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
@@ -33,10 +33,22 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5*" />
-                        <RowDefinition Height="90*" />
+                        <RowDefinition Height="10*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="75*" />
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <TabControl Grid.Column="1" Grid.Row="1">
+                    <Grid Grid.Column="1" Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="55*" />
+                            <ColumnDefinition Width="10*" />
+                            <ColumnDefinition Width="25*" />
+                            <ColumnDefinition Width="10*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox Grid.Column="0"/>
+                        <Button Content="Buscar" Grid.Column="2"/>
+                    </Grid>
+                    <TabControl Grid.Column="1" Grid.Row="3" x:Name="TabViews">
                         <TabItem Header="Datos Personales">
 
                             <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
