--- a/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
@@ -6,7 +6,7 @@
         <Setter Property="OverridesDefaultStyle" Value="False" />
         <Setter Property="Grid.IsSharedSizeScope" Value="true" />
         <Setter Property="HasDropShadow" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource BackgroundContainerGradient}" />
+        <Setter Property="Background" Value="{DynamicResource SecondaryColorLowOpacitySolid}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
@@ -27,8 +27,8 @@
         </Setter>
     </Style>
     <Style TargetType="{x:Type MenuItem}">
-        <Setter Property="Background" Value="{DynamicResource MainColorSolid}" />
-        <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{DynamicResource MainColorSolid}" />
         <Setter Property="Margin" Value="5,5,5,0" />
     </Style>
 </ResourceDictionary>
