--- a/Gestion_AcademicoAdministrativa_Abastos/styles/Text.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/Text.xaml
@@ -3,6 +3,7 @@
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
     <Style TargetType="Label" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
+        <Setter Property="ContextMenu" Value="{StaticResource ContextMenuTextBox}" />
     </Style>
     
     <Style x:Key="NotificationContent" TargetType="TextBlock">
@@ -13,6 +14,7 @@
         <Setter Property="FontFamily" Value="{DynamicResource StandardFontFamily}" />
         <Setter Property="FontSize" Value="{DynamicResource StandardFontSize}" />
         <Setter Property="FontStretch" Value="Normal" />
+        <Setter Property="ContextMenu" Value="{StaticResource ContextMenuTextBox}" />
     </Style>
     
     <Style x:Key="PlaceHolderContent" TargetType="TextBlock" BasedOn="{StaticResource NotificationContent}">
@@ -107,6 +109,7 @@
     </ControlTemplate>
     <Style TargetType="PasswordBox" BasedOn="{StaticResource textboxPasswordboxStyles}">
         <Setter Property="Template" Value="{StaticResource passwordbox}" />
+        <Setter Property="ContextMenu" Value="{StaticResource ContextMenuTextBox}" />
     </Style>
     <Style TargetType="ToolTip" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
